# Phontex

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  _quick_train.py  _test_trocr.py  article.md  benchmark_calamari.py  benchmark_cross_domain.py  benchmark_lora.py  benchmark_qwen.py  benchmark_xd_calamari.py  generate_test_images.py  generate_training_data.py  generate_tum_cross_domain.py  pyproject.toml  test_ocr.py  test_training.py  train.py  train_single.py  train_tcroft_ddp.py  train_tcroft_lora.py  train_trocr.py
.github/workflows/: ci.yml
frontend/: README.md
frontend/server/: pyproject.toml  server.py
frontend/tauri/: package-lock.json  package.json
frontend/tauri/src-tauri/: Cargo.toml  tauri.conf.json
frontend/tauri/src-tauri/capabilities/: main.json
frontend/tauri/src-tauri/src/: lib.rs  main.rs
frontend/tauri/web/: index.html  result.html
ipa_ocr/: __init__.py  cli.py  engine.py  gui.py
ipa_ocr/dataset/: __init__.py  augment.py  ipa_dataset.py
ipa_ocr/infer/: __init__.py  predictor.py
ipa_ocr/model/: __init__.py  crnn.py  modules.py
ipa_ocr/train/: __init__.py  config.py  trainer.py
ipa_ocr/utils/: __init__.py  characters.py
outputs_lora_data2/best_model/: README.md  adapter_config.json
scripts/: smoke_test.py
