[project]
name = "phontex-server"
version = "1.0.0"
description = "Phontex FastAPI backend — TrOCR+LoRA OCR inference"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "torch>=2.0.0",
    "pillow>=10.0.0",
    "pyperclip>=1.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.uv]
dev-dependencies = []