[package]
name = "phontex"
version = "1.0.0"
description = "Phontex — IPA OCR desktop app"
authors = ["Phontex"]
edition = "2021"

[lib]
name = "phontex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2.5"

[[bin]]
name = "phontex"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.5", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-notification = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "sync"] }
base64 = "0.22"
image = "0.25"
screenshots = "0.8"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
parking_lot = "0.12"
urlencoding = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true